# BiGI

./: .gitignore  LICENSE  MANIFEST.in  README.md  action.yml  build_wasm.py  package.json  pyproject.toml  vercel.json
.github/workflows/: bigi-pages.yml  ci.yml  example-usage.yml.template  pr_blast_radius.yml
api/: index.py
bigi/: __init__.py  cli.py  gitignore.py  graph.py  html_template.py  server.py
bigi/parsers/: generic.py  nextflow.py  python.py  snakemake.py
bigi/render/: html_template.py  template.html
physics_wasm/: Cargo.toml
physics_wasm/src/: lib.rs
scripts/: build_wasm.py
src/app/: globals.css  layout.tsx  page.tsx
tests/: test_parsers.py  test_vercel.py
