[package]
name = "physics_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link Time Optimization
codegen-units = 1    # Enable full size optimization
panic = "abort"      # Prevent unwinding to save binary size
